# Observability

./: README.md
obs-real-bench-public/: .gitignore  INSTANCE_AND_METRICS_EXPLANATION.md  README.md  run_all_agent.sh
obs-real-bench-public/instances/file/: _example.json
obs-real-bench-public/instances/function/: _example.json  _mine_manifest.json  _polyglot_manifest.json  boutique__go__checkoutservice__main__PlaceOrder__L230.json  boutique__go__checkoutservice__main__initTracing__L154.json  boutique__go__checkoutservice__main__main__L88.json  boutique__go__frontend__deployment_details__initializeLogger__L22.json  boutique__go__frontend__deployment_details__loadDeploymentDetails__L36.json  boutique__go__frontend__handlers__emptyCartHandler__L239.json  boutique__go__frontend__handlers__homeHandler__L59.json  boutique__go__frontend__handlers__setCurrencyHandler__L499.json  boutique__go__frontend__main__initProfiling__L194.json  boutique__go__frontend__main__initTracing__L177.json  boutique__go__frontend__main__main__L91.json  boutique__go__frontend__middleware__ServeHTTP__L57.json  boutique__go__productcatalogservice__catalog_loader__getSecretPayload__L62.json  boutique__go__productcatalogservice__catalog_loader__loadCatalogFromAlloyDB__L85.json  boutique__go__productcatalogservice__catalog_loader__loadCatalogFromLocalFile__L44.json  boutique__go__productcatalogservice__product_catalog__parseCatalog__L74.json  boutique__go__productcatalogservice__server__initProfiling__L179.json  (+650 more)
obs-real-bench-public/prompts/: p1_obs_hinted.md  p_blind.md  p_fewshot.md  p_skill_observability.md  p_skill_vibe_transfer.md
obs-real-bench-public/tools/: __init__.py  _quarantine_bad_instances.py  aggregate_pilot.py  aggregate_repo_lang.py  build_instances.py  build_siblings.py  filter_and_sample.py  function_io.py  function_io_ts.py  langspec.py  llm_client.py  mine.py  mine_polyglot.py  pilot.py  pilot_prefix.py  plot_quantity_quality_finding.py  prompt_render.py  rescore.py  run_llm.py  run_otel_fault_log_experiments.sh  score.py  score_anchor.py  score_anchor_ts.py  summarize_otel_fault_observability.py  ts_obs.py
vibe_coding_public/: .gitignore  Makefile  README.md  dataset_source_seed_material.md  run_all_demos.sh  run_parallel_demos.sh  run_skill_demos.sh
vibe_coding_public/_lib/: gen-fault-yamls.py  gen_specs.py  run-common.sh  run_all_multifault_parallel.sh  scaffold.py
vibe_coding_public/faults/: README.md
vibe_coding_public/infra/: kind-cluster.yaml
vibe_coding_public/judge/: README.md  judge.py  oracle.yaml
vibe_coding_public/services/11-image-resizer/: CMakeLists.txt  SPEC.md  main.cpp  run.sh
vibe_coding_public/services/11-image-resizer/faults/: F01-pod-kill.yaml  F02-network-delay.yaml
vibe_coding_public/services/11-image-resizer/k8s/: deployment.yaml
vibe_coding_public/services/142-warehouse-routing/: Cargo.toml  Dockerfile  SPEC.md  exercise.sh  run.sh
vibe_coding_public/services/142-warehouse-routing/faults/: F01-pod-kill.yaml  F02-network-delay.yaml  F05-db-down.yaml  F06-db-slow.yaml  F07-cache-down.yaml  F08-cache-slow.yaml  F11-cpu-stress.yaml  F12-net-corrupt.yaml  F13-time-skew.yaml
vibe_coding_public/services/142-warehouse-routing/k8s/: deployment.yaml
vibe_coding_public/services/142-warehouse-routing/src/: main.rs
vibe_coding_public/services/188-heartbeat-monitor/: Cargo.toml  Dockerfile  SPEC.md  run.sh
vibe_coding_public/services/188-heartbeat-monitor/faults/: F01-pod-kill.yaml  F02-network-delay.yaml  F07-cache-down.yaml  F08-cache-slow.yaml  F09-queue-down.yaml  F10-queue-slow.yaml  F11-cpu-stress.yaml  F12-net-corrupt.yaml  F13-time-skew.yaml
vibe_coding_public/services/188-heartbeat-monitor/k8s/: deployment.yaml
vibe_coding_public/services/188-heartbeat-monitor/src/: main.rs
vibe_coding_public/services/22-wishlist-service/src/: Cargo.toml
vibe_coding_public/services/22-wishlist-service/src/src/: main.rs
vibe_coding_public/services/34-stock-notifier/src/: Cargo.toml
vibe_coding_public/services/34-stock-notifier/src/src/: main.rs
vibe_coding_public/services/40-feed-generator/src/: Cargo.toml
vibe_coding_public/services/40-feed-generator/src/src/: main.rs
vibe_coding_public/services/74-payment-processor/src/: Cargo.toml
vibe_coding_public/services/74-payment-processor/src/src/: main.rs
vibe_coding_public/services_skill/11-image-resizer-skill/: CMakeLists.txt  CONTRACT.json  Dockerfile  PROMPT.md  README.md  exercise.sh  run.sh
vibe_coding_public/services_skill/11-image-resizer-skill/faults/: F01-pod-kill.yaml  F02-network-delay.yaml
vibe_coding_public/services_skill/11-image-resizer-skill/k8s/: deployment.yaml
vibe_coding_public/services_skill/188-heartbeat-monitor-skill/src/: Cargo.toml
vibe_coding_public/services_skill/188-heartbeat-monitor-skill/src/src/: main.rs
vibe_coding_public/tools/: compare_skill_results.py  keep_awake.ps1  precheck.sh  prepull_skill_base_images.sh  rejudge_fault_specific_187.sh  run_isolated_sdk_generation.py  run_services_skill_sdk_generation.py  run_skill_model_pipeline.py  skill_experiment.py  stop_skill_runs.sh  summarize_campaign.py
(+5533 files in other folders)
