[package]
name = "warehouse-routing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "warehouse-routing"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
redis = { version = "0.25", features = ["tokio-comp", "aio"] }
chrono = { version = "0.4", features = ["serde"] }
