[package]
name = "heartbeat-monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "heartbeat-monitor"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
redis = { version = "0.25", features = ["tokio-comp", "aio"] }
tower-http = { version = "0.5", features = ["trace"] }
