[package]
name = "stock-notifier"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stock-notifier"
path = "src/main.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-postgres = "0.7"
redis = { version = "0.25", features = ["tokio-comp"] }
